--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <h1>Mahitha's Portfolio</h1>
     <h2> I am  Web Developer</h2>
     <hr />
-    <h3><a href="./public/birthday.html">Movie Ranking Project</a></h3>
+    <h3><a href="./public/movieranking.html">Movie Ranking Project</a></h3>
     <img src="./assets/images/movierankss.png" height="200" alt="movire ranking preview" />
     <br />
-    <h3><a href="./public/movieranking.html">Birthday Invite Project</a></h3>
+    <h3><a href="./public/birthday.html">Birthday Invite Project</a></h3>
     <img src="./assets/images/birthdayss.png" height="200"  alt="birthday invite preview" />
     <br />
     <a href="./public/about.html">About Me</a>
