--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
     <h3><a href="./public/birthday.html">Birthday Invite Project</a></h3>
     <img src="./assets/images/birthdayss.png" height="200"  alt="birthday invite preview" />
     <br />
+    <h3><a href="./resume.html">My Resume</a></h3>
+    <img src="./assets/images/resumess.png" height="200" alt="my resume preview" />
+    <br />
     <a href="./public/about.html">About Me</a>
     <a href="./public/contact.html">Contact Me</a>
+    
   </body>
 </html>
 
