--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Mahitha Vanagundhi</h1>
-    <img src="./profilepicture.png" height="200" alt="passport size picture of Mahitha">
+    <img src="./assets/images/profilepicture.png" height="200" alt="passport size picture of Mahitha">
     <h2>SUMMARY</h2>
     <hr />
     <p>An enthusiast engineer with high interest in exploring software skills</p>
